# ioc_container

./: CMakeLists.txt  DockerFile  README.md  build.sh
example/: DecoderHardwareImpl.hpp  DecoderInterface.hpp  LoggerBadImpl.hpp  LoggerFileImpl.hpp  LoggerInterface.hpp  VideoPlayerImpl.hpp  VideoPlayerInterface.hpp  main.cpp
inc/: IocContainer.hpp
src/: IocContainer.cpp
